# dphpc

./: .gitmodules  cluster.md  graph.out  lsf.o193912138  readme.md
.github/workflows/: ci.yml  summary.sh
benchmarks/: bandwidth.py  benchmark.py  collect.py  config.py  plot.py  process.py  run.sh  scheduler.py  shared.py  verify.py
code/: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  benchmark.sh  common.h  dsop.h  dsop_single.cpp  dsop_single.h  dsop_test.cpp  main.cpp  matrix.cpp  matrix.h  matrix_test.cpp  readme.md  test.h  util.cpp  vector.h
code/include/: common.h  dsop.h  dsop_single.h  matrix.h  util.hpp  vector.h
code/include/allgather/: impl.hpp
code/include/allgather_async/: impl.hpp
code/include/allreduce/: impl.hpp
code/include/allreduce_butterfly/: impl.hpp
code/include/allreduce_butterfly_segmented/: impl.hpp
code/include/allreduce_rabenseifner/: impl.hpp
code/include/allreduce_ring/: impl.hpp
code/include/allreduce_ring_pipeline/: impl.hpp
code/include/bruck_async/: impl.hpp
code/include/grabenseifner_allgather/: impl.hpp
code/include/grabenseifner_allgather_scatter/: impl.hpp
code/include/grabenseifner_allgather_segmented/: impl.hpp
code/include/grabenseifner_subgroup/: impl.hpp
code/include/rabenseifner_gather/: impl.hpp
code/include/rabenseifner_scatter/: impl.hpp
code/src/: dsop_single.cpp  main.cpp  matrix.cpp  util.cpp  vector.cpp
code/src/allgather/: impl.cpp
code/src/allgather_async/: impl.cpp
code/src/allreduce/: impl.cpp
code/src/allreduce_butterfly/: impl.cpp
code/src/allreduce_butterfly_segmented/: impl.cpp
code/src/allreduce_rabenseifner/: impl.cpp
code/src/allreduce_ring/: impl.cpp
code/src/allreduce_ring_pipeline/: impl.cpp
code/src/bruck_async/: impl.cpp
code/src/grabenseifner_allgather/: impl.cpp
code/src/grabenseifner_allgather_scatter/: impl.cpp
code/src/grabenseifner_allgather_segmented/: impl.cpp
code/src/grabenseifner_subgroup/: impl.cpp
code/src/rabenseifner_gather/: impl.cpp
code/src/rabenseifner_scatter/: impl.cpp
code/tests/: dsop_test.cpp  matrix_test.cpp
euler/: Makefile  check_completed.sh  collect_jobs.sh  init.sh  monitor_jobs.sh  readme.md  submit_jobs.sh
euler/wrapper/: run_benchmark.sh  run_verify_completed.sh
notes/: Meeting-Notes-2021-11-01.md  Meeting-Notes-2021-11-08.md  Output_Format.md  Plotting.md  algos_desc.md  algos_desc_allgather.md  algos_desc_allreduce.md  euler_specs.md  rabenseifner_desc.md
notes/cost-model/: allgather-neighbor.c  allreduce-ring-segmented.c  allreduce-ring.cpp
plotting/: jobs.py  plot.py  plotter.py
res/: readme.md
res/first/parsed/: 1.json  2.json  3.json
resources/bandwidth/: bw_rcv.csv  bw_snd.csv
results/: .gitignore  readme.md
results/elwin/parsed/: 0.json  1.json  2.json
results/elwin/raw/: 190207922  190207922.err  190207924  190207924.err  190207926  190207926.err  190207928  190207928.err  190207929  190207929.err  190207930  190207930.err  190207931  190207931.err  190207932  190207932.err  190207933  190207933.err  190207935  190207935.err  190207936  190207936.err  190207937  190207937.err  190207938  190207938.err  190207939  190207939.err  190207940  190207940.err  190207941  190207941.err  190207942  190207942.err  190207943  190207943.err  190207945  190207945.err  190207947  190207947.err  (+443 more)
scripts/: benchmark.py  check_completed.sh  collect.py  collect_jobs.sh  config.py  deprecated.md  lib.py  run_benchmark.sh  submit_jobs.sh
scripts/euler/: benchmark.py  benchmark.sh  collect.sh  config.py  config.sh  init.sh  job_status_overview.sh  kill.sh  lib.py  verify.py  verify_completed.sh
scripts/euler_wrapper/: run_verify_completed.sh
scripts/plotting/: plotter.py
scripts/plotting/input_files_samples/: first_file copy.txt  first_file.txt  first_file2 copy.txt  first_file2.txt  first_file3 copy.txt  first_file3.txt  first_file4 copy.txt  first_file4.txt  first_file5 copy.txt  first_file5.txt
scripts/wrapper/: run_benchmark.sh  run_verify_completed.sh
